# ff_data_analytics

./: .coverage  .dbt-opiner.yaml  .env  .env.example  .env.template  .envrc  .github_secrets_temp.txt  .gitignore  .lintr  .mdformat.toml  .pre-commit-config.yaml  .sqlfluff  .sqlfluffignore  .yamlfix.toml  .yamllint.yml  AGENTS.md  CLAUDE.md  IMPLEMENTATION_STATUS_ASSESSMENT.md  Makefile  README.md  WARP.md  coverage.json  dbt-opiner.yaml  ff_analytics.code-workspace  justfile  justfile.bak  pyproject.toml  pyrightconfig.json  xref_duplicates.csv
.archive/archived_spec/: data_architecture_checklist.md  spec_1_fantasy_football_analytics_data_architecture_consolidated_v_2.md  spec_1_fantasy_football_analytics_data_architecture_final.md  spec_1_fantasy_football_analytics_data_architecture_final_02.md  spec_1_main_spec_clean_copy.md  spec_1_main_spec_final.md  spec_1_ops_playbooks_appendices.md
.claude/agents/: data-architecture-spec1.md
.claude/commands/: snapshot-ticket.md
.cursor/: worktrees.json
.github/: actionlint.yaml
.github/workflows/: commissioner_sheet_copy.yml  commissioner_sheet_ingest.yml  data-pipeline.yml  debug_sheets_access.yml  ingest_google_sheets.yml  test-secrets.yml  test-sheets-access.yml  test_simple_access.yml
_script_snippets/python/: ktc_to_csv.py
ai_docs/: architecture.md  bmm-workflow-status.yaml  data-gap-assessment-competitive-window-2025-11-18.md  data-models-main.md  implementation-readiness-report-2025-11-18.md  index.md  prd.md  project-scan-report.json  research-competitive-window-2025-11-18.md  research-contract-economics-2025-11-18.md  research-domain-2025-11-18.md  research-validation-complete-2025-11-18.md  validation-report-20251118_211213.md
ai_docs/sprint_artifacts/: 0-1-prefect-cloud-workspace-setup.context.xml  0-1-prefect-cloud-workspace-setup.md  sprint-status.yaml  tech-spec-epic-0.md
config/: README.md  env_config.yaml  snapshot_freshness_thresholds.yaml
config/gcs/: lifecycle.json
config/projections/: ffanalytics_projection_weights_mapped.csv  ffanalytics_projections_config.yaml
config/scoring/: sleeper_scoring_rules.yaml
data/data_dictionaries/: sdio_fantasydata-nflv3-data-dictionary.csv
data/raw/: data_sources.txt
dbt/ff_analytics/: CLAUDE.md  README.md  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
dbt/ff_data_transform/: .user.yml  CLAUDE.md  README.md  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
docs/adr/: ADR-004-github-actions-for-sheets.md  ADR-005-commissioner-sheet-ingestion-strategy.md  ADR-006-gcs-integration-strategy.md  ADR-007-separate-fact-tables-actuals-vs-projections.md  ADR-008-league-transaction-history-integration.md  ADR-009-single-consolidated-fact-table-nfl-stats.md  ADR-010-mfl-id-canonical-player-identity.md  ADR-011-league-rules-dimensional-framework.md  ADR-011-sequential-surrogate-player-id.md  ADR-012-name-position-normalization-idp.md  ADR-013-fantasysharks-idp-single-source-dependency.md  ADR-014-pick-identity-resolution-via-overall-pick-number.md  README.md
docs/analysis/: RCA_contract_snapshot_offseason_timing.md  TRANSACTIONS_contract_validation_analysis.md  TRANSACTIONS_handoff_20251001_phase1.md  TRANSACTIONS_handoff_20251002_phase2.md  TRANSACTIONS_kimball_strategy_20251001.md  TRANSACTIONS_profiling_20251001.md  handoff_20251001_player_key_solution.md
docs/analytics/: Rookie Pick Hit Rates.xlsx  ffaanalytics_projection_source_accuracy.tsv  ffaanalytics_projection_source_accuracy.txt  reception_perception_dynasty_rankings.txt  reception_perception_rb_data.txt
docs/analytics_references/: README.md  dynasty_ff_research.md  dynasty_roster_construction_strategies.md  dynasty_salary_cap_strategy_guide.md  dynasty_strategy_frameworks_2025.md  dynasty_trade_value_methodologies.md  fasa_targets_research.md  ml_sports_analytics_research.md  player_aging_curves_positional_value_research.md  player_valuation_frameworks.md  statistical_methods_research.md
docs/dev/: CI_CD_IMPLEMENTATION_GUIDE.md  README_CI_CD.md  SECURITY_POLICY.md  dbt_best_practices.md  gcs_lifecycle_explained.md  how_to_use_the_sample_generator_tools_make_samples.md  linting_consistency_checklist.md  polars_dataframes.md  repo_conventions_and_structure.md  sleeper-api-client.txt
docs/findings/: 2025-10-29_idp_historical_data_investigation.md  2025-10-29_idp_opportunity_snap_counts_addendum.md  2025-10-29_idp_source_investigation.md  2025-11-13_ffanalytics_name_collision_bug.md  2025-11-13_team_deduplication_audit.md  PHASE_1_IDP_DATA_FLOW_INVESTIGATION.md  SLEEPER_IDP_INVESTIGATION_INDEX.md  SLEEPER_IDP_INVESTIGATION_REPORT.md  SLEEPER_IDP_QUICK_REFERENCE.md  SLEEPER_IDP_SUMMARY.txt  sleeper_database_audit.md
docs/implementation/: fix__player_id_csv_dependency__20251107.md
docs/investigations/: 2026_comp_picks_reference.md  P1-020-through-P1-024_root_cause_analysis_2025-11-10.md  comp_pick_investigation_2025-11-07.md  dim_pick_implementation_summary_2025-11-07.md  dim_pick_rebuild_architecture_v2.md  dim_pick_rebuild_plan_2025-11-07.md  dim_pick_rebuild_solution_2025-11-07.md  dim_pick_status_2025-11-07.md  dim_pick_v2_implementation_summary.md
docs/issues/: commissioner_sheet_access_issue.md  commissioner_sheet_access_issue_troubleshooting.md  dbt_audit.csv
docs/ops/: ci_transition_plan.md  cloud_storage_migration.md  data_freshness_current_state.md  (+3 more)
flows/: test_workspace_setup.py
ingest/: registry.py  shim.py
notebooks/: TRAP_with_nflreadpy.ipynb  commissioner_sheet_export.ipynb  fasa_enhanced_v2.ipynb  fasa_weekly_strategy.ipynb  fasa_weekly_strategy_executed.ipynb  keep_trade_cut_ingest.ipynb  ktc.csv  load_nflverse_data.ipynb  sheets_to_csv_gdrive.ipynb
scripts/: CLAUDE.md  validate_contract_sources.py
tests/: test_conventions_data_layout.py  test_nflverse_samples_pk.py  test_sheets_commissioner_parser.py  test_sheets_copier.py
tools/: CLAUDE.md  analyze_snapshot_coverage.py  commissioner_parse.py  ffa_score_projections.py  make_samples.py  parse_commissioner_local.py  smoke_gcs_write.py  update_snapshot_registry.py  validate_manifests.py
(+815 files in other folders)
